--- a/Portfolio Tutorial/index.html
+++ b/Portfolio Tutorial/index.html
@@ -11,7 +11,7 @@
     	<nav>
     		<h1>Suhail,s Desk</h1>
     		<ul id="nav">
-    			<li><a class="homered" href="#">Main</a></li>
+    			<li><a class="homered" href="#">Start</a></li>
     			<li><a class="homeblack" href="portfolio.html">Portfolio</a></li>
     			<li><a class="homeblack" href="#">About Me</a></li>
     			<li><a class="homeblack" href="#">Contact</a></li>
