Second times changes
Spellings change and one new tab

--- a/Portfolio Tutorial/index.html
+++ b/Portfolio Tutorial/index.html
@@ -15,6 +15,7 @@
     			<li><a class="homeblack" href="portfolio.html">Portfolio</a></li>
     			<li><a class="homeblack" href="#">About Me</a></li>
     			<li><a class="homeblack" href="#">Contact</a></li>
+                <li><a class="homeblack" href="#">History</a></li>
     		</ul>
     	</nav>
     </header>
@@ -24,7 +25,7 @@
     	<h1 class="homea">Accumulating</h1>
     	<h1 class="homean">and Transfering</h1>
     	<br>
-    	<button class="p">Pressures</button>
+    	<button class="p">Pressurezz</button>
     </div>
     
 </body>
